# slfmt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  slfmt.cpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
bench/: CMakeLists.txt  bench.cpp
cmake/: opt.cmake
examples/: CMakeLists.txt  basic_usage.cpp  combined_logger.cpp  format_usage.cpp  rolling_usage.cpp
include/: CMakeLists.txt  slfmt.h  slfmt.hpp
include/slfmt/: Color.h  CombinedLogger.h  ConsoleLogger.h  FileLogger.h  Files.h  Level.h  LogFormat.h  LogManager.h  Logger.h  LoggerBase.h  RollingFileLogger.h  Version.h  color.h  level.h  logger.h  logger.hpp  version.h  version.hpp
src/: main.cpp  slfmt.cpp
test/: CMakeLists.txt  test.cpp
